openshift-temp/payment-system-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-system
  labels:
    app: payment-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-system
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: payment-system
    spec:
      containers:
        - name: payment-system
          image: nlmontes/payment-system:pilot
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: app-logs-volume
              mountPath: /logs
      restartPolicy: Always
      volumes:
        - name: app-logs-volume
          emptyDir: {}
